<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/action_settings"
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item
        android:title="@string/action_instructions"
        android:id="@+id/action_instructions"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item
        android:title="@string/action_save"
        android:id="@+id/action_save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_save"/>

    <item
        android:title="@string/action_share"
        android:id="@+id/action_share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share"/>
</menu>